# semantic-search

./: .gitignore  pyproject.toml
semantic_search/: evaluate_companies.ipynb  evaluate_linkedin.ipynb  try_annoy.ipynb  try_msmarco.ipynb
