[tool.poetry]
name = "semantic-search"
version = "0.1.0"
description = ""
authors = ["Lysk <kroyer.github@gmail.com>"]
license = "Apache Licence 2.0"
readme = "README.md"
packages = [{include = "semantic_search"}]

[tool.poetry.dependencies]
python = "3.10.13"
jupyter = "^1.0.0"
exceptiongroup = "^1.1.3"
torch = "2.0.0"
sentence-transformers = "^2.2.2"
pandas = "^2.1.1"
annoy = "^1.17.3"
unidecode = "^1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
